--- a/online-store/package.json
+++ b/online-store/package.json
@@ -9,12 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tailwindcss/postcss7-compat": "^2.2.17",
     "next": "13.5.4",
     "react": "^18",
     "react-dom": "^18",
     "react-responsive-carousel": "^3.2.23",
     "react-slick": "^0.29.0",
-    "slick-carousel": "^1.8.1"
+    "slick-carousel": "^1.8.1",
+    "tailwindcss-filters": "^3.0.0"
   },
   "devDependencies": {
     "autoprefixer": "^10",
